feat: angular material added with custome theming

--- a/apps/moofy-admin/src/styles.scss
+++ b/apps/moofy-admin/src/styles.scss
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+// src/styles.scss
+
+@use '@angular/material' as mat;
+@use 'themes/all' as themes;
+
+@include mat.core();
+
+:root {
+  // @include mat.all-component-themes($my-app-theme);
+  @include mat.core-theme(themes.$my-app-theme);
+  @include mat.button-theme(themes.$my-app-theme);
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
