--- a/libs/moofy-admin/frontend/login/src/lib/moofy-frontend-login/moofy-frontend-login.component.html
+++ b/libs/moofy-admin/frontend/login/src/lib/moofy-frontend-login/moofy-frontend-login.component.html
@@ -1,1 +1,6 @@
-<p>moofy-frontend-login works!</p>
+<!-- src/app/app.component.html -->
+
+<button mat-button>Basic</button>
+<button mat-raised-button>Raised</button>
+<button mat-stroked-button>Stroked</button>
+<button mat-flat-button>Flat</button>
