--- a/libs/moofy-admin/frontend/login/src/lib/moofy-frontend-login/moofy-frontend-login.component.html
+++ b/libs/moofy-admin/frontend/login/src/lib/moofy-frontend-login/moofy-frontend-login.component.html
@@ -1,6 +1,1 @@
-<!-- src/app/app.component.html -->
-
-<button mat-button>Basic</button>
-<button mat-raised-button>Raised</button>
-<button mat-stroked-button>Stroked</button>
-<button mat-flat-button>Flat</button>
+<div>moofy component works</div>
