--- a/m3-theme.scss
+++ b/m3-theme.scss
@@ -129,40 +129,42 @@ $_palettes: (
 $_rest: (
   secondary: map.get($_palettes, secondary),
   neutral: map.get($_palettes, neutral),
-  neutral-variant: map.get($_palettes,  neutral-variant),
+  neutral-variant: map.get($_palettes, neutral-variant),
   error: map.get($_palettes, error),
 );
 $_primary: map.merge(map.get($_palettes, primary), $_rest);
 $_tertiary: map.merge(map.get($_palettes, tertiary), $_rest);
 
-
-
-$light-theme: mat.define-theme((
-  color: (
-    theme-type: light,
-    use-system-variables: true, // Enable system variables
-    system-variables-prefix: md-sys-color // Prefix for your CSS variables
-  ),
-  typography: (
-    use-system-variables: true, // Enable typography variables
-    system-variables-prefix: md-sys-color
+$light-theme: mat.define-theme(
+  (
+    color: (
+      theme-type: light,
+      use-system-variables: true,
+      // Enable system variables
+      system-variables-prefix: md-sys-color // Prefix for your CSS variables,
+    ),
+    typography: (
+      use-system-variables: true,
+      // Enable typography variables
+      system-variables-prefix: md-sys-color,
+    ),
   )
-));
+);
 
-$dark-theme: mat.define-theme((
-  color: (
-    theme-type: dark,
-    use-system-variables: true, // Enable system variables for dark theme
-    system-variables-prefix: md-sys-color
-  ),
-  typography: (
-    use-system-variables: true,
-    system-variables-prefix: md-sys-color
+$dark-theme: mat.define-theme(
+  (
+    color: (
+      theme-type: dark,
+      use-system-variables: true,
+      // Enable system variables for dark theme
+      system-variables-prefix: md-sys-color,
+    ),
+    typography: (
+      use-system-variables: true,
+      system-variables-prefix: md-sys-color,
+    ),
   )
-));
-
+);
 
 //////////////////
-/// 
-
-
+///
