--- a/libs/moofy-admin/frontend/login/src/lib/moofy-frontend-login/moofy-frontend-login.component.html
+++ b/libs/moofy-admin/frontend/login/src/lib/moofy-frontend-login/moofy-frontend-login.component.html
@@ -2,17 +2,18 @@
 
 <div class="login-container">
   <div class="logo">
-    <span><img class="w-16" src="assets/img/logo.svg" /></span>
-
+    <span><img src="assets/img/logo.svg" alt="Moofy Logo" /></span>
     <span>Moofy</span>
   </div>
-
-  <fa-icon [icon]="['fab', 'google']"></fa-icon>
 
   <form [formGroup]="loginInputForm" class="form-login-inputs">
     <h3>Welcome back</h3>
     <p>Sign in to with Google or credentials.</p>
-    <button mat-flat-button>Continue with Google</button>
+
+    <button mat-flat-button class="google-signin">
+      <fa-icon [icon]="['fab', 'google']"></fa-icon>
+      <span>Continue with Google</span>
+    </button>
     <div class="divider">-or-</div>
     <mat-form-field appearance="outline">
       <mat-label>Enter your email</mat-label>
@@ -51,8 +52,8 @@
     </mat-form-field>
 
     <section class="example-section">
+      <div class="forgot-password">Forgot Password?</div>
       <mat-checkbox class="example-margin">Remember Me</mat-checkbox>
-      <div>Forgot Password?</div>
     </section>
 
     <button mat-flat-button>SIGN IN</button>
