--- a/libs/moofy-admin/frontend/login/src/lib/moofy-frontend-login/moofy-frontend-login.component.scss
+++ b/libs/moofy-admin/frontend/login/src/lib/moofy-frontend-login/moofy-frontend-login.component.scss
@@ -83,7 +83,7 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); // Optional for visual separation
   display: flex; // Flexbox for internal content alignment
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
 }
@@ -107,17 +107,26 @@ input.example-right-align {
 
 form {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   flex-direction: column;
   width: 65%;
+  height: 100%;
 
   .divider {
     margin: 1rem;
   }
+
+  .google-signin {
+    border-radius: 0.5rem;
+
+    span {
+      margin-left: 0.5rem;
+    }
+  }
+
   button {
     width: 100%;
-    // border-radius: 0.5rem;
   }
 }
 
@@ -131,11 +140,15 @@ mat-form-field {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin: 1.5rem 0 2rem 0;
+  margin: 1rem 0 2rem 0;
+
+  .forgot-password {
+    margin-left: 1rem;
+  }
 }
 
 .example-margin {
-  margin: 0 12px;
+  margin: 0 10px;
 }
 
 .logo {
@@ -144,7 +157,8 @@ mat-form-field {
   gap: 0.5rem; /* Add space between the image and text */
   width: auto; /* Prevent the container from taking up the full width */
   height: auto; /* Adjust height if needed */
-  margin-bottom: 2.5rem;
+  margin-left: 1rem;
+
   align-self: flex-start; /* Align the logo to the left */
 }
 
@@ -170,10 +184,28 @@ mat-form-field {
   }
 }
 
-
 @media (max-width: 800px) {
   .login-container {
     height: 100%;
     width: 100%;
+  }
+}
+
+@media (max-width: 550px) {
+  .example-section {
+    font-size: 0.75rem;
+  }
+  .example-margin {
+    margin: 0;
+  }
+}
+
+@media (max-width: 330px) {
+  .example-section {
+    flex-direction: column;
+  }
+
+  button {
+    font-size: 0.7rem;
   }
 }
